fixed issue -16293 Pagination NOT showing properly in Twenty Seventeen Dark Version

--- a/assets/css/twenty-seventeen.scss
+++ b/assets/css/twenty-seventeen.scss
@@ -102,7 +102,17 @@
 		color: #fff;
 	}
 }
-
+.colors-dark {
+	.woocommerce-pagination {
+		span.page-numbers.current {
+			background-color: #fff;
+		}
+		.next.page-numbers,.prev.page-numbers,a.page-numbers,span.page-numbers{
+			background: #505050;
+		}	
+		
+	}
+}
 .onsale {
 	background-color: #fff;
 	position: absolute;
